--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -9,3 +9,11 @@
   publisher={Elsevier},
   url={http://www.ncbi.nlm.nih.gov/pubmed/24656754}
 }
+
+@misc{ons,
+  title={Life expectancies},
+  author={Office for National Statistics},
+  howpublished={\url{http://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/lifeexpectancies}},
+  note = {Accessed: 2016-06-02},
+  copyright={Open Government Licence v3.0}
+}
