--- a/TODO
+++ b/TODO
@@ -1,2 +1,6 @@
   - More rigorous stress testing
   - Centre image in user guide
+  - Correct: "Alongside the p-values from the over/under dispersion test (reword correctly)"
+  - List other authors in user guide
+  - List papers published where we've used this code to estimate prevalence (lymphomas and myelomas) in user guide
+  - Correct ONS reference in user guide
