--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
   - More rigorous stress testing
   - Centre image in user guide
+  - Add URL to DESCRIPTION
+  - Remove version numbers from DESCRIPTION
+  - Extend authorship of user guide?
