Specify indexdate in prevalence specifically

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
   - More rigorous stress testing
   - Centre image in user guide
-  - prev_counted include index date and prevalence
-  - Suppress warnings failing to converge
+  - How to handle when survival model building doesn't converge? Ignore and resample, raise warning? Or just throw error?
   - TODO Error in max_yearly_incidence, OR have it automatically determined?
