--- a/vignettes/user_guide.Rmd
+++ b/vignettes/user_guide.Rmd
@@ -200,30 +200,32 @@ As a reminder, prevalence is estimated using incidence and survival data from *n
 
 In the first instance, prevalence can be estimated by counting from the registry data. It is imperative that the number of incident cases is complete for estimating prevalence, and that follow-up data for all cases is complete at least until after the index date. In the case of the provided *prevsim* data set the last recorded incident case date and the last date of follow-up are different, as is typically the case in registry data sets where incidence and follow-up data are provided by different sources.
 
-`prevalence_counted` calculates prevalence contributions for each year of the provided registry data, specified using the `start` and `num_reg_years` arguments. The index date, automatically calculated to be the last date of the last year of registry data included by the user, is `r tail(determine_registry_years(start='2004-01-30', num_reg_years=9), n=1)` in our example. In `prevalence_counted()`, all cases alive after the index date are censored. 
+`prevalence_counted` calculates prevalence contributions for each year of the provided registry data to the index date - specified using the `index_date` argument. The `earliest_data` parameter allows the user to specify that only cases incident after a specific date are included in the estimation, in the example below incident cases in 2003 are discarded due to concerns about their accuracy. In `prevalence_counted()`, all cases alive after the index date are censored. 
 
-NB: all follow-up data for the available incident cases is still used in survival modelling.
 
 ```{r survival, error = TRUE}
 prevalence_counted(prevsim$entrydate, 
                    prevsim$eventdate, 
                    prevsim$status, 
-                   start="2004-01-30", 
-                   num_reg_years=9)
+                   index_date="2013-01-30",
+                   earliest_date="2004-01-01") 
 ```
 
 The function returns the prevalence contributions by year, in ascending order (i.e there are 44 contributions from the year between 2004-01-30 and 2005-01-30).
 
 ## Simulation
 
-Prevalence is estimated using simulation by calling `prevalence()`. `num_years_to_estimate` corresponds to the required number of years preceding the index date that contribute incident cases. If any values are larger than `num_reg_years` then the remainder of years have their incidence and survival characteristics simulated. By passing a vector to `num_years_to_estimate`, multiple estimates of prevalence at the index date can be calculated with their own confidence intervals. The `population_size` variable is used to estimate prevalence per one hundred thousand (or at any rate specified by the `proportion` argument).
+Prevalence is estimated using simulation by calling `prevalence()`. `index_date` and `earliest_date` perform the same role as in `prevalence_counted`: specifying the date at which to estimate point prevalence, and allowing for the specification of the earliest registry data to use. `num_years_to_estimate` corresponds to the required number of years preceding the index date that contribute incident cases. If any values are larger than the number of complete years of registry data available between `index_date` and `earliest_date`, then the remainder of years have their incidence and survival characteristics simulated. By passing a vector to `num_years_to_estimate`, multiple estimates of prevalence at the index date can be calculated with their own confidence intervals. The `population_size` variable is used to estimate prevalence per one hundred thousand (or at any rate specified by the `proportion` argument).
+
+NB: all follow-up data for the available incident cases is still used in survival modelling.
 
 ```{r prevalencetotal, error = TRUE}
 prevalence_total <- prevalence(Surv(time, status) ~ sex(sex) + age(age) + 
                                    entry(entrydate) + event(eventdate),
                                prevsim, num_years_to_estimate=c(3, 5, 10), 
-                               population_size=1e6, cure=5, 
-                               start='2004-01-30', num_reg_years=9)
+                               population_size=1e6, 
+                               index_date='2013-01-30',
+                               earliest_date='2004-01-01', cure=5) 
 ```
 
 Printing the `prevalence` object returned by the function of the same name displays the point estimate of prevalence at the index date using `num_years_to_estimate` years of data:
